# MiProyecto

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
docs/source/: ProyectoPython.rst  conf.py  index.rst  modules.rst
src/: images.py  mymail.py
src/ProyectoPython/: images.py
src/tests/: tests.py
src/tests/ProyectoPython/: images.py  mymail.py
